<resources>
    <string name="app_name" translatable="false">MediLog</string>
    <string name="appDescription">MediLog - Health Data logger</string>
    <string name="tab_bloodpressure">Blood Pressure</string>
    <string name="tab_weight">Weight</string>
    <string name="action_settings">Settings</string>
    <string name="action_send">Send</string>
    <string name="action_deleteDB">Delete Database</string>
    <string name="action_about">About</string>
    <string name="action_demoData">Create demo data</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="weight">Weight</string>
    <string name="systolic">Sys </string>
    <string name="diatolic">Dia </string>
    <string name="pulse">Pulse</string>
    <string name="comment">Comment</string>
    <string name="settings">Settings</string>
    <string name="deleteDB_title">Delete Database</string>
    <string name="deleteDB_message">Do you want to delete all data?</string>
    <string name="title_activity_about">About</string>
    <string name="weightMissing">Weight value missing!</string>
    <string name="diaMissing">Diatolic value missing!</string>
    <string name="pulseMissing">Pulse value missing!</string>
    <string name="sysMissing">Test</string>
    <string name="doYouReally1">Do you want to delete the </string>
    <string name="doYouReally2"> database?</string>
    <string name="date">Date</string>
    <string name="sendBPMessage">Send Blood Pressure  data to...</string>
    <string name="sendWMessage">Send Weight data to...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recordsLoaded">records loaded!</string>
    <string name="recordsDeleted">records deleted!</string>
    <string name="weightUnit">Unit</string>
    <string name="delimiter">Delimiter</string>
    <string name="general">General</string>
    <string name="verbose">Verbose messages</string>
    <string name="preferencesDelimiterSummary">Field delimiter for send action</string>
    <string name="ItemClicked">Item:</string>
    <string name="ShowWeightTab">Show Weight Tab</string>
    <string name="ShowBloodPressureTab">Show Blood Pressure Tab </string>
    <string name="Copyright1">Copyright 2019 zell-mbc.com.  Licensed under MIT License</string>
    <string name="Copyright2">This application includes androidplot, https://github.com/halfhp/androidplot/blob/master/docs/xyplot.md</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
