<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editSys"
        android:layout_width="60dip"
        android:layout_height="40dip"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/systolic"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDia"
        android:layout_width="60dip"
        android:layout_height="40dip"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/diatolic"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editSys"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPulse"
        android:layout_width="60dip"
        android:layout_height="40dip"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/pulse"
        android:inputType="number"
        android:nextFocusRight="@+id/editComment"
        app:layout_constraintStart_toEndOf="@+id/editDia"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="275dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="text"
        android:nextFocusRight="@+id/editSys"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="addPressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ListView
        android:id="@+id/pressureList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fastScrollAlwaysVisible="true"
        android:isScrollContainer="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComment" />


</android.support.constraint.ConstraintLayout>